# SDRunoPlugin_Cosmo

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_FIX.md  AnnotatorStore.h  CMakeLists.txt  Directory.Build.props  LICENSE  Propuesta Perplexity.md  README.md  SDRunoPlugin_Cosmo.cpp  SDRunoPlugin_Cosmo.def  SDRunoPlugin_Cosmo.h  SDRunoPlugin_Cosmo.rc  SDRunoPlugin_Cosmo.sln  SDRunoPlugin_Cosmo.vcxproj  SDRunoPlugin_CosmoUi.cpp  SDRunoPlugin_CosmoUi.h  SDRunoPlugin_Template.cpp  SDRunoPlugin_Template.h  SDRunoPlugin_Template.rc  SDRunoPlugin_Template.sln  SDRunoPlugin_Template.vcxproj  SDRunoPlugin_Template.vcxproj.filters  SDRunoPlugin_TemplateForm.cpp  SDRunoPlugin_TemplateForm.h  SDRunoPlugin_TemplateProject.cpp  SDRunoPlugin_TemplateSettingsDialog.cpp  SDRunoPlugin_TemplateSettingsDialog.h  SDRunoPlugin_TemplateUi.cpp  SDRunoPlugin_TemplateUi.h  SETUP.md  SIGNAL_CAPTURE_FIXES.md  UI_IMPLEMENTATION_SUMMARY.md  UI_IMPROVEMENTS.md  VENTANA_INFO.md  WINDOW_SPEC.md  _codeql_detected_source_root  build.bat  dllmain.cpp  fundamentos.md  (+4 more)
.ci/: README.md
.github/workflows/: build.yml  release-on-tag.yml
include/: complex.h  iunoannotator.h  iunoaudioobserver.h  iunoaudioprocessor.h  iunompxobserver.h  iunoplugin.h  iunoplugincontroller.h  iunostreamobserver.h  iunostreamprocessor.h  unoevent.h
installer/: Cosmo.iss
packaging/: README_INSTALL.txt
